--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <nav>
       <div class="nav-col-1">
         <div>
-          <img src="/images/otere.png" alt="logo" />
+          <img src="./images/otere.png" alt="logo" />
         </div>
         <div class="vertical-line"></div>
         <a href="#" class="nav-btn">Blog</a>
       </div>
       <div class="nav-col-2">
         <a href="#" class="nav-btn"
-          ><img src="/images/Polygon 1.png" alt="archive" />Archives</a
+          ><img src="./images/Polygon 1.png" alt="archive" />Archives</a
         >
         <a href="#" class="nav-btn"
-          ><img src="/images/cart.png" alt="cart" />Store</a
+          ><img src="./images/cart.png" alt="cart" />Store</a
         >
         <div class="mobile-menu"><i class="fa-solid fa-bars"></i></div>
         <button class="get-a-quote">Get a Quote</button>
@@ -40,16 +40,12 @@
           <p>#Market</p>
         </div>
       </div>
-      <img src="/images/Group (1).png" alt="images" />
+      <img src="./images/Group (1).png" alt="images" />
     </section>
     <section class="main-card">
       <div class="main-card-image">
-        <img src="/images/Rectangle 29.png" alt="robot-hand">
-        <!-- <img
-          src="https://images.unsplash.com/photo-1689852484069-3e0fe82cc7c1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60"
-          alt="robot-hand"
-        /> -->
-      </div>
+        <img src="./images/Rectangle 29.png" alt="robot-hand">
+        </div>
       <div class="main-card-text">
         <h1>Latest post heading sample tex..</h1>
         <div class="main-row-1">
@@ -69,7 +65,7 @@
     <div class="cards">
       <div class="card">
         <div id="card-image">
-          <img src="/images/Rectangle 15.png" alt="image">
+          <img src="./images/Rectangle 15.png" alt="image">
         </div>
         <div class="card-texts">
         <h1 class="card-heading">Other post heading sample</h1>
@@ -83,7 +79,7 @@
       </div>
       <div class="card">
         <div id="card-image">
-          <img src="/images/Rectangle 15.png" alt="image">
+          <img src="./images/Rectangle 15.png" alt="image">
         </div>
         <div class="card-texts">
         <h1 class="card-heading">Other post heading sample</h1>
@@ -97,7 +93,7 @@
       </div>
       <div class="card">
         <div id="card-image">
-          <img src="/images/Rectangle 15.png" alt="image">
+          <img src="./images/Rectangle 15.png" alt="image">
         </div>
         <div class="card-texts">
         <h1 class="card-heading">Other post heading sample</h1>
@@ -119,7 +115,7 @@
         <button class="footer-btn">Download Now</button>
       </div>
       <div class="footer-col-2">
-        <img src="/images/Group (2).png" alt="images">
+        <img src="./images/Group (2).png" alt="images">
       </div>
     </section>
   </body>
